Add custom item group

--- a/src/main/resources/assets/mechanicaltech/lang/en_us.json
+++ b/src/main/resources/assets/mechanicaltech/lang/en_us.json
@@ -37,5 +37,7 @@
   "item.mechanicaltech.flour": "Flour",
   "item.mechanicaltech.starch": "Starch",
   "item.mechanicaltech.iron_grit": "Iron Grit",
-  "item.mechanicaltech.gold_grit": "Gold Grit"
+  "item.mechanicaltech.gold_grit": "Gold Grit",
+
+  "itemGroup.mechanicaltech.items": "Mechanical Tech"
 }
