--- a/src/main/resources/assets/mechanicaltech/lang/en_us.json
+++ b/src/main/resources/assets/mechanicaltech/lang/en_us.json
@@ -4,6 +4,10 @@
   "block.mechanicaltech.windsail": "Windsail",
   "block.mechanicaltech.manual_crank": "Manual Crank",
 
+  "block.mechanicaltech.battery_base": "Battery Base",
+  "block.mechanicaltech.battery_mid": "Battery Core",
+  "block.mechanicaltech.battery_cap": "Battery Cap",
+
   "block.mechanicaltech.mill": "Mill",
   "block.mechanicaltech.grinder": "Grinder",
 
@@ -12,7 +16,7 @@
   "block.mechanicaltech.angled_connector_forward_below": "Angled Connector (Down-Forward)",
   "block.mechanicaltech.angled_connector_left": "Angled Connector (Forward-Left)",
   "block.mechanicaltech.angled_connector_right": "Angled Connector (Forward-Right)",
-  "block.mechanicaltech.angled_connector_up": "Angled Connector (Forward-Top)",
+  "block.mechanicaltech.angled_connector_up": "Angled Connector (Forward-Up)",
   "block.mechanicaltech.cross_connector": "Cross Connector",
   "block.mechanicaltech.spindle": "Spindle",
 
