Add missing item translation key

--- a/src/main/resources/assets/mechanicaltech/lang/en_us.json
+++ b/src/main/resources/assets/mechanicaltech/lang/en_us.json
@@ -25,6 +25,7 @@
 
   "item.mechanicaltech.mill": "Mill",
   "item.mechanicaltech.grinder": "Grinder",
+  "item.mechanicaltech.sawmill": "Sawmill",
 
   "item.mechanicaltech.angled_connector_down": "Angled Connector (Down)",
   "item.mechanicaltech.angled_connector_right": "Angled Connector (Side)",
