--- a/src/main/resources/assets/mechanicaltech/lang/ru_ru.json
+++ b/src/main/resources/assets/mechanicaltech/lang/ru_ru.json
@@ -15,7 +15,7 @@
   "block.mechanicaltech.angled_connector_down": "Нижний Соединитель",
   "block.mechanicaltech.angled_connector_right": "Боковой Соединитель",
   "block.mechanicaltech.angled_connector_up": "Верхний Соединитель",
-  "block.mechanicaltech.cross_connector": "Верхний Соединитель",
+  "block.mechanicaltech.cross_connector": "Перекрёсный Соединитель",
   "block.mechanicaltech.spindle": "Шпиндель",
 
   "item.mechanicaltech.turbine": "Турбина",
